--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="p5/p5.js"></script>
 	<script src="main.js"></script>
 	<script src="p5.play/lib/p5.play.js"></script>
+	<script src="p5/addons/p5.sound.js"></script>
 </head>
 
 <body>
